# libby-search-setup-charlotte

./: .gitignore  README.md  pyproject.toml  requirements.txt  sync_scrape.sh  test_descriptions.py
libby_core/: __init__.py  ai.py  assessment.py  descriptions.py  parse_groups.py  settings.py
tests/: test_parse_groups.py
uk/: README.md  clacton_search_targets.csv  data_loading.py  generate_search.py  generate_search_overture.py  geo.py  parsing.py  pipeline.py  settings.py
uk/overture-outputs/: finchley_and_golders_green_search_targets.csv
us/: README.md  download_places.py  pipeline.py  settings.py
